force-app/main/default/objects/User/fields/Community_Case_Visibility_Updated__c.field-meta.xml
<CustomField>
    <fullName>Community_Case_Visibility_Updated__c</fullName>
    <label>Community Case Visibility Updated</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
    <description>Used in the kbrithum Experience site. This box is ticked whenever the &quot;Community_Case_Visibility__c&quot; box is changed, which then triggers a scheduled Flow to run that updates the User&apos;s Profile</description>
</CustomField>