force-app/main/default/objects/User/fields/Contact_s_Account_ID__c.field-meta.xml
<CustomField>
    <fullName>Contact_s_Account_ID__c</fullName>
    <label>Contact&apos;s Account ID</label>
    <type>Text</type>
    <formula>CASESAFEID(Contact.AccountId)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <description>Used in the kbrithum Experience site. Formula of the User&apos;s Contact&apos;s Account Id. Used to determine which Account&apos;s Cases a Community User is able to access.</description>
</CustomField>